BL-742 Fix failing ASM tests